重构项目结构：模块化设计与配置系统优化
主要改进：
✨ 新增功能：
- 添加统一程序入口 D2MapGenTool.py
- 实现配置驱动的运行模式 (GUI/无GUI自动切换)
- 添加WSL环境自动检测与配置
- 新增模板配置系统与JSON配置文件
- 实现交互式地图编辑器

🏗️ 项目重构：
- 将核心模块迁移到 src/ 目录
- 分离配置文件到 config/ 目录
- 模块化设计：地图生成、可视化、模板加载分离
- 优化Poetry配置与脚本入口

📝 文档更新：
- 重写README.md，添加完整使用指南
- 添加WSL环境配置说明
- 新增配置文件详细说明
- 添加模板自定义示例

🔧 配置优化：
- 简化用户配置，只需config.json一个文件
- 智能环境检测，自动fallback机制
- 支持无GUI批量生成模式
- 更新gitignore，排除生成文件

🗑️ 清理代码：
- 移除旧版本的散乱文件 (demo.py等)
- 统一代码风格与结构
- 优化依赖管理

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = "基于区块拼接算法的游戏地图生成工具，参考暗黑破坏神2的地图生成机制"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
-# packages = [{include = "mymapgentool", from = "."}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
@@ -17,7 +17,7 @@ black = "^23.0.0"
 flake8 = "^6.0.0"
 
 [tool.poetry.scripts]
-demo = "demo:main"
+D2MapGenTool = "D2MapGenTool:main"
 editor = "interactive_editor:main"
 
 [build-system]
