feat: 实现悬崖生成规则和完整测试套件
主要改进：
- 🎯 添加悬崖生成约束：悬崖必须同时有平原和高地邻居
- 🔧 简化规则逻辑：统一使用 must_have 配置
- 🧪 按Poetry约定添加完整测试套件(36个测试)
- 📁 创建标准tests/目录结构
- ⚡ 修复网格初始化bug
- 📋 添加测试文档和运行脚本

详细变更：
- config/templates_config.json: 添加悬崖生成规则和边缘兼容性
- src/map_generator.py: 实现通用规则检查系统和约束验证
- src/template_loader.py: 添加生成规则加载支持
- tests/: 新增完整测试套件，包含约束测试、集成测试、性能测试
- pyproject.toml: 添加pytest配置
- run_tests.py: 便捷测试运行脚本

--- a/config/templates_config.json
+++ b/config/templates_config.json
@@ -101,9 +101,17 @@
     ["plain", "forest"],
     ["plain", "river"],
     ["plain", "slope"],
+    ["plain", "cliff"],
     ["highland", "slope"],
     ["highland", "cliff"],
     ["forest", "slope"],
     ["forest", "cliff"]
-  ]
+  ],
+  "generation_rules": {
+    "cliff": {
+      "required_neighbors": {
+        "must_have": ["plain", "highland"]
+      }
+    }
+  }
 }
