refactor: 将地形兼容性规则迁移到配置文件并整理项目结构
主要修改：
- 将硬编码的兼容性规则从 terrain_types.py 移动到 templates_config.json
- 修改 _load_compatibility_from_config 方法从配置文件动态读取兼容性规则
- 更新配置文件中的 edge_compatibility 规则，包含所有地形类型的兼容性

项目结构整理：
- 删除临时的 debug_*.py 文件
- 将 test_compatibility.py 和 test_dynamic_system.py 移动到 tests/ 目录
- 修正移动后测试文件的导入路径

测试验证：
- 所有 40 个测试通过
- 新增的兼容性测试验证配置文件规则正确工作
- 动态系统测试确保类型系统正常运行

优势：
- 提高了系统的可配置性和灵活性
- 游戏设计师可以通过修改配置文件调整地形规则，无需修改代码
- 项目结构更加清晰，测试文件组织良好

--- a/config/templates_config.json
+++ b/config/templates_config.json
@@ -37,18 +37,6 @@
       "weight": 1.5
     },
     {
-      "name": "river",
-      "description": "河流区块",
-      "terrain_pattern": "river",
-      "edges": {
-        "north": "river",
-        "south": "river",
-        "east": "river",
-        "west": "river"
-      },
-      "weight": 0.8
-    },
-    {
       "name": "slope",
       "description": "斜坡区块",
       "terrain_pattern": "slope",
@@ -78,7 +66,6 @@
     "forest": "森林",
     "highland": "高地",
     "cliff": "悬崖",
-    "river": "河流",
     "slope": "斜坡"
   },
   "terrain_colors": {
@@ -86,7 +73,6 @@
     "forest": [0.1, 0.4, 0.1],
     "highland": [0.8, 0.6, 0.4],
     "cliff": [0.5, 0.5, 0.5],
-    "river": [0.2, 0.4, 0.8],
     "slope": [0.6, 0.3, 0.15]
   },
   "edge_types": {
@@ -94,17 +80,16 @@
     "forest": "forest_edge",
     "highland": "highland_edge",
     "cliff": "cliff_edge",
-    "river": "river_edge",
     "slope": "slope_edge"
   },
   "edge_compatibility": [
     ["plain", "forest"],
-    ["plain", "river"],
-    ["plain", "slope"],
-    ["plain", "cliff"],
+    ["highland", "plain"],
+    ["slope", "plain"],
     ["highland", "slope"],
-    ["highland", "cliff"],
     ["forest", "slope"],
+    ["plain", "cliff"],
+    ["highland", "cliff"],
     ["forest", "cliff"]
   ],
   "generation_rules": {
